Polished SearchBox. Fixed blank detail activity bug.
SearchBox:
* Added button selectors for rest of searchbox buttons for all API levels.
* Added new icons for the overflow icon and the clear search "x" icon.
* Made necessary changes to modify SearchBox elements from XML instead of
Java.
* Pressing the done button on the soft keyboard doesn't toggle the
search and only clears focus of the search editText now.

Bug fix:
* Fixed a bug that would render the detail activity blank whenever the
soft keyboard was visible before entering the activity.

--- a/app/libs/persistent-search/src/main/res/values/colors.xml
+++ b/app/libs/persistent-search/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="button_ripple">#1f000000</color>
+    <color name="button_highlight">#1f000000</color>
+    <color name="search_box_black">#212121</color>
+    <color name="search_box_grey">#616161</color>
 </resources>
