--- a/app/src/main/res/layout-sw360dp/fragment_detail.xml
+++ b/app/src/main/res/layout-sw360dp/fragment_detail.xml
@@ -13,10 +13,10 @@
     <include layout="@layout/detail_main_section"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"/>
+        android:layout_weight="1"/>
 
     <include layout="@layout/detail_extras_section"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2.7"/>
+        android:layout_weight=".9"/>
 </LinearLayout>
