--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 7 inch tablet and above-->
 <resources>
     <dimen name="card_view_margin">64dp</dimen>
 </resources>
