--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
+<!-- default values to fall back on if not defined in other dimen files-->
 <resources>
     <!-- Logo -->
     <dimen name="logo_font_size">36dp</dimen>
+    <dimen name="app_bar_height">68dp</dimen>
 
     <!-- Stock arrow size-->
     <dimen name="stock_arrow_size_normal">24dp</dimen>
@@ -13,11 +15,14 @@
     <dimen name="supplementary_text_size">16sp</dimen>
     <dimen name="symbol_text_size">32sp</dimen>
 
+    <dimen name="column_item_text_size">20sp</dimen>
+    <dimen name="column_item_vertical_margin">5dp</dimen>
+
     <dimen name="detail_right_column_inner_padding">15dp</dimen>
     <dimen name="detail_left_column_inner_padding">15dp</dimen>
     <dimen name="detail_common_column_outer_padding">0dp</dimen>
 
-    <!-- On devices < sw360dp scrollview generates this whitespace for
+    <!-- On devices < sw360dp scrollview generates this whitespace on bottom of screen for
     some reason and we need to fill it out vertically-->
     <dimen name="detail_extras_section_vertical_padding">10dp</dimen>
     <dimen name="detail_extras_section_horizontal_padding">20dp</dimen>
@@ -29,4 +34,7 @@
 
     <dimen name="card_view_margin">@dimen/abc_list_item_padding_horizontal_material</dimen>
     <!--End Detail fragment-->
+
+    <!--list_item-->
+    <dimen name="list_item_padding">10dp</dimen>
 </resources>
