--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="colorAccent">#eeff41</color>
 
     <color name="secondary_text">#727272</color>
-    <color name="white">#ffff</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 
     <!--stock up or down colors-->
     <color name="stock_up_green">#0ec24d</color>
@@ -13,7 +14,7 @@
 
     <!--Detail Fragment extra colors -->
     <color name="detail_extras_background">#2e4134</color>
-    <color name="detail_extras_label">#b3cab1</color>
+    <color name="detail_extras_label">#def5db</color>
 
     <!-- the activated state color of list_item-->
     <color name="activated">#E0E0E0</color>
