--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:textAppearanceLarge"
             app:layout_columnWeight="5"
+            android:text="GPRO"
             tools:text="GPRO"/>
 
         <TextView
@@ -28,6 +29,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:textAppearanceLarge"
             app:layout_columnWeight="1"
+            android:text="$263.26"
             tools:text="$263.26"/>
 
         <TextView
@@ -35,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:textAppearanceLarge"
+            android:text="33d"
             tools:text="33d"/>
 
         <ImageView
@@ -43,6 +46,7 @@
             android:layout_height="@dimen/stock_arrow_size_normal"
             android:contentDescription="@string/content_description_stock_arrow"
             app:layout_gravity="center_vertical"
+            android:src="@drawable/ic_stock_down"
             tools:src="@drawable/ic_stock_down"/>
 
         <TextView
@@ -54,6 +58,7 @@
             android:singleLine="true"
             android:ellipsize="end"
             app:layout_columnWeight="5"
+            android:text="GoPro, Inc."
             tools:text="GoPro, Inc."/>
 
         <TextView
@@ -63,6 +68,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_columnWeight="1"
             app:layout_columnSpan="3"
+            android:text="$-220.00 (-393.44%)"
             tools:text="$-220.00 (-393.44%)"
             tools:textColor="@color/stock_down_red"/>
 
