--- a/app/src/main/res/values-sw400dp/dimens.xml
+++ b/app/src/main/res/values-sw400dp/dimens.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="symbol_text_size">24sp</dimen>
+    <dimen name="column_item_text_size">20sp</dimen>
 </resources>
